Fix phrase error and remove margin spacing

--- a/css/style.css
+++ b/css/style.css
@@ -67,10 +67,9 @@ fieldset{
 
   #title {
     font-size: 1em;
-	margin-left: 3.5;
  }
   input[type=submit] {
-    margin-left: 1.8em;
+  margin-left: 1.8em;
  }
 }
 
@@ -78,7 +77,7 @@ fieldset{
   body {
     font-size: 2.178em;
   }
-  
+}
   
 
   
